nodeapp/nodeapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
        deployment: nodeapp
    spec:
      containers:
      - name: nodejs-demo
        image: quay.io/rhn_support_algonzal/nodeapp:1.0 
        ports:
        - containerPort: 8080
