nodeapp/nodeapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodeapp
    app.kubernetes.io/component: nodeapp
    app.kubernetes.io/instance: nodeapp
  name: nodeapp
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: nodeapp
  sessionAffinity: None
  type: ClusterIP
