nodeapp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nodeapp
    app.kubernetes.io/component: nodeapp
    app.kubernetes.io/instance: nodeapp
  name: nodeapp
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: nodeapp
    weight: 100
  wildcardPolicy: None
